--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Manuel-25",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "multer": "^1.4.5-lts.1",
