--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1"
