--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-handlebars": "^7.0.7",
     "method-override": "^3.0.0",
     "mongoose": "^7.2.0",
+    "mongoose-paginate-v2": "^1.7.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
