--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose-paginate-v2": "^1.7.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1",
     "sweetalert2": "^11.7.5"
