--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongoose": "^7.2.0",
     "mongoose-paginate-v2": "^1.7.1",
