--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 LINK_MONGO2 = 'mongodb://localhost:27017'
 LINK_MONGO = 'mongodb+srv://manu:onita0102@cluster0.fgglgec.mongodb.net/WineAndChill'
+SECRET_COOKIE = 'gke0349t2901rjf920jflw'
 PORT = 8080
