--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 LINK_MONGO2 = 'mongodb://localhost:27017'
 LINK_MONGO = 'mongodb+srv://manu:onita0102@cluster0.fgglgec.mongodb.net/WineAndChill'
 SECRET_COOKIE = 'gke0349t2901rjf920jflw'
+SECRET_SESSION = 'vfshgrhfdbzsfzfvd4324256b
 PORT = 8080
