--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sprint_01",
   "version": "1.0.0",
-  "description": "Este es un proyecto que permite gestionar productos dentro de un array y guardarlos en un archivo `data.json`. Cada producto contiene los siguientes campos: `title`, `description`, `price`, `thumbnail`, `code` y `stock`.",
+  "description": "wine ecommerce",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
