--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.6.1",
     "sweetalert2": "^11.7.5"
   }
