--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ LINK_MONGO2 = 'mongodb://localhost:27017'
 LINK_MONGO = 'mongodb+srv://manu:onita0102@cluster0.fgglgec.mongodb.net/WineAndChill'
 SECRET_COOKIE = 'gke0349t2901rjf920jflw'
 SECRET_SESSION = 'vfshgrhfdbzsfzfvd4324256b'
+SECRET_JWT = 'ASDAOILDHJQW8OEDKASAÑ124ADQ"#$DA'
 PORT = 8080
 
 GH_APP_ID = 356293
