Commander & config.js added

--- a/src/.env.production
+++ b/src/.env.production
@@ -1,7 +1,6 @@
-LINK_MONGO2 = 'mongodb://localhost:27017'
 LINK_MONGO = 'mongodb+srv://manu:onita0102@cluster0.fgglgec.mongodb.net/WineAndChill'
-SECRET_COOKIE = 'gke0349t2901rjf920jflw'
-SECRET_SESSION = 'vfshgrhfdbzsfzfvd4324256b'
+SECRET_COOKIE = 'gke0349t2901rjf920jflwgfdgdsjtkrrsefa,r8o7trtersefdv'
+SECRET_SESSION = 'vfshgrhfdbzsfzfvd4324256bhgfhdhjdgjfjtfydhrthfhdhh'
 SECRET_JWT = 'ASDAOILDHJQW8OEDKASAÑ124ADQ"#$DA'
 
 GH_APP_ID = 356293
