--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,6 @@ SECRET_JWT = 'ASDAOILDHJQW8OEDKASAÑ124ADQ"#$DA'
 GH_APP_ID = 356293
 GH_CLIENT_ID = Iv1.1ffd755192b36ffd
 GH_CLIENT_SECRET = f8a5bbbff7aabbe7c1e9b6a97e67327620642d1f
+
+ADMIN_EMAIL = 'admin@admin.com'
+ADMIN_PASSWORD = 'abcd1234'
