Dao Factory & respositories

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
 LINK_MONGO2 = 'mongodb://localhost:27017'
 LINK_MONGO = 'mongodb+srv://manu:onita0102@cluster0.fgglgec.mongodb.net/WineAndChill'
+PERSISTENCE = 'MONGO'
 SECRET_COOKIE = 'gke0349t2901rjf920jflw'
 SECRET_SESSION = 'vfshgrhfdbzsfzfvd4324256b'
 SECRET_JWT = 'ASDAOILDHJQW8OEDKASAÑ124ADQ"#$DA'
