--- a/.env.development
+++ b/.env.development
@@ -11,3 +11,6 @@ GH_CLIENT_SECRET = f8a5bbbff7aabbe7c1e9b6a97e67327620642d1f
 
 ADMIN_EMAIL = 'admin@admin.com'
 ADMIN_PASSWORD = 'abcd1234'
+
+GMAIL_EMAIL = manuelotamendi97@gmail.com
+GMAIL_PASSWOR = zuhuskqovccaqgkt
