--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.1",
+    "nodemailer": "^6.9.4",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.6.1",
-    "sweetalert2": "^11.7.5"
+    "sweetalert2": "^11.7.5",
+    "twilio": "^4.14.1"
   }
 }
