--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.6.1",
+    "socket.io-cookie-parser": "^1.0.0",
     "sweetalert2": "^11.7.5",
     "twilio": "^4.14.1"
   }
