--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.1",
     "nodemailer": "^6.9.4",
-    "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
@@ -45,6 +44,7 @@
     "winston": "^3.10.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.0.2"
+    "@faker-js/faker": "^8.0.2",
+    "nodemon": "^3.0.1"
   }
 }
