--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "socket.io-cookie-parser": "^1.0.0",
     "sweetalert2": "^11.7.5",
     "twilio": "^4.14.1",
+    "uuid": "^9.0.0",
     "winston": "^3.10.0"
   },
   "devDependencies": {
