--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "passport-local": "^1.0.0",
     "socket.io": "^4.6.1",
     "socket.io-cookie-parser": "^1.0.0",
+    "stripe": "^13.7.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "sweetalert2": "^11.7.5",
